# orion

./: .env.example  .gitignore  .python-version  Dockerfile  Dockerfile.worker  docker-compose.yml  pyproject.toml
docs/: prd.md
docs/arch/: implementation-plan.md  phase9-spec.md
k8s/: deployment-api.yaml  deployment-worker.yaml
k8s/helm/orion/: Chart.yaml  values.yaml
k8s/helm/orion/templates/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  secrets.yaml  service.yaml
scripts/: migrate.sh  start-worker.sh
src/orion/: alembic.ini  config.py  main.py
src/orion/alembic/: env.py
src/orion/alembic/versions/: 003_add_phase9_tables.py
src/orion/api/: app.py  websocket.py
src/orion/api/routes/: approvals.py  memory.py  streaming.py  tools.py  workflows.py
src/orion/db/: __init__.py  models.py  session.py
src/orion/memory/: __init__.py  models.py  service.py
src/orion/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/orion/retry/: __init__.py  policy.py
src/orion/security/: __init__.py  audit.py  auth.py  authorization.py  rate_limit.py  secrets.py
src/orion/streaming/: __init__.py  events.py  manager.py  redis_pubsub.py
src/orion/tools/: __init__.py  base.py  llm.py  memory.py  registry.py  search.py  streaming_llm.py
src/orion/workflow/: activities.py  approval.py  cancellation.py  client.py  worker.py  workflows.py
tests/: conftest.py
tests/api/: test_approvals.py  test_memory.py  test_streaming.py  test_tools.py  test_websocket.py  test_workflows.py
tests/db/: test_models.py
tests/memory/: test_models.py  test_service.py
tests/observability/: test_logging.py  test_metrics.py  test_tracing.py
tests/retry/: test_policy.py
tests/security/: test_audit.py  test_auth.py  test_authorization.py  test_rate_limit.py  test_secrets.py
tests/streaming/: test_events.py  test_manager.py  test_redis_pubsub.py
tests/tools/: test_memory_tools.py  test_registry.py
tests/workflow/: test_approval.py  test_cancellation.py  test_client.py  test_workflows.py
