[project]
name = "orion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "temporalio>=1.7",
    "fastmcp>=2.10",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b",
    "opentelemetry-instrumentation-httpx>=0.48b",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = ["ruff", "ty"]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[project.scripts]
orion = "orion.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",           # Docstrings - handled separately
    "COM812",      # Trailing comma (ruff format conflict)
    "ISC001",      # Single line string concatenation (ruff format conflict)
    "ANN201",      # Missing return type for public functions (add incrementally)
    "ARG001",      # Unused function argument (common in decorators/callbacks)
    "S104",        # Possible binding to all interfaces (intentional for server)
    "S101",        # Assert in tests
    "PLR2004",     # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
addopts = ["--cov=orion", "--cov-fail-under=80", "-ra"]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.12"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
