[project]
name = "orion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "temporalio>=1.7",
    "fastmcp>=2.10",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b",
    "opentelemetry-instrumentation-httpx>=0.48b",
    "tenacity>=9.0",
    "cryptography>=42.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.1",
]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = ["ruff", "ty"]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[project.scripts]
orion = "orion.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",           # Docstrings - handled separately
    "COM812",      # Trailing comma (ruff format conflict)
    "ISC001",      # Single line string concatenation (ruff format conflict)
    "ANN201",      # Missing return type for public functions (add incrementally)
    "ARG001",      # Unused function argument (common in decorators/callbacks)
    "S104",        # Possible binding to all interfaces (intentional for server)
    "S101",        # Assert in tests
    "PLR2004",     # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",        # Assert in tests
    "PLR2004",     # Magic value comparison
    "ANN001",      # Missing type annotation for fixture args
    "ANN202",      # Missing return type for private fixtures
    "ARG002",      # Unused method argument (fixture params)
    "PLC0415",     # Import not at top level (common in tests)
    "SLF001",      # Private member access (testing internals)
]

[tool.pytest.ini_options]
addopts = ["--cov=orion", "--cov-fail-under=80", "-ra"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "src/orion/alembic/*",       # Alembic migration scripts
    "src/orion/main.py",          # CLI entry point
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "coverage: exclude",
]

[tool.ty.environment]
python-version = "3.12"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
